chore: lots of updates
